--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=IM+Fell+Double+Pica&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo&display=swap');
 
 .noselect {
     -webkit-touch-callout: none; /* iOS Safari */
