added welcome page!

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,7 @@
               user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome, Edge, Opera and Firefox */
   }
+
+.transform_position {
+  transform: translate(-50%, -50%);
+}
